<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- nom de l'application -->
    <string name="app_name_release">Dubun Guiziga</string>
    <string name="app_name_debug">Dubun Guiziga</string>
    <string name="msg_c_quoi">C\'est quoi?</string>
    <string name="msg_poisson">poisson</string>
    <string name="msg_arc">arc</string>
    <string name="msg_cruche">cruche</string>
    <string name="msg_feuille">feuille</string>
    <string name="msg_i_mike">i mike?</string>
    <string name="default_notification_channel_id">glearning</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">3221988621168281</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb3221988621168281</string>
    <string name="fui_progress_dialog_signing_up">Creating your shiny new account...</string>
    <string name="home_msg"><![CDATA[<p>
                   Sukum ɗuwoy, ɗerewol ngi dubuna sluf waɗ tuhu keɗeɗe ti mi giziga i hana so, a zil ti jiviɗ 42,
                    a zli ti “A”, ara kiɗmi ti “Zl”. Gwat mekelemey ada ara, a zilaka taŋ ti mi franse
                    <i>“idiophone”</i>,
                   kaɓa ni: kpololo, nyo’nyo, ... anta a mbiɗi ti mi franse ta amma I mbuɗa taŋ kine tikine,
                   naŋ jeŋ ŋwa’ta.
                </p>
                <p>
                    Yo slimiɗ ngi widisey ati gwat mekelemey kwana, anta mijeŋ naŋ ti mi franse vuna ta ma,
                    sey <i>“nom scientifique” </i> , I mbur gar masina gu ta, yo mekeleme naŋ jek haɗi ma. I mbuɗa “arbre,
                    herbe, oiseau, ... Isa boko taŋ pislek pislek ŋwa sey ar <i>“dictionnaire”</i> giziga masa bo ma.
                </p>]]>
    </string>
    <string name="activity_main_disconnect_canceled">Déconnexion annulée</string>
    <string name="activity_main_do_you_want_to_leave_app">Voudriez-vous quitter l\'application?</string>
    <string name="activity_main_button_yes_msg">OUI</string>
    <string name="activity_main_do_you_want_to_disconnect">Voudriez-vous vous déconnecter de l\'application?</string>
    <string name="activity_main_button_no_msg">NON</string>
    <string name="activity_main_button_cancel">Annuler</string>
    <string name="activity_main_see_you_soon">, vous revoir bientôt !</string>
    <string name="activity_main_button_close">Fermer</string>
    <string name="activity_main_check_your_connection_and_try_again">Vérifiez votre connexion internet et réessayer plus tard.</string>
    <string name="oops_connection_issue_msg">Oops! Erreur connexion internet</string>
    <string name="activity_main_username">Utilisateur</string>
    <string name="activity_main_email_address">Adresse Email</string>
    <string name="activity_main_network_issue">Oops! Erreur connexion internet</string>
    <string name="activity_main_thanks_msg">" Merci "</string>
    <string name="firebase_subscription_release" translatable="false">firebase-glearning-release</string>
    <string name="firebase_subscription_debug" translatable="false">firebase-glearning-debug</string>
    <string name="main_activity_close_msg">Fermer</string>
    <string name="app_version">1.1.2</string>
    <string name="ads_native_notification_item_debug" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="fragment_notif_layout_no_elements">Aucune notification\ndisponible</string>
    <string name="app_google_play_store_url">https://play.google.com/store/apps/details?id=com.flys.glearning</string>
    <string name="delete_msg">Deleted</string>
    <string name="ads_native_notification_item" translatable="false">ca-app-pub-9112600790446098/4885818374</string>
    <string name="fcm_notification_service_no_messages">\u0020nouveaux messages</string>
    <string name="fcm_notification_service_one_message">\u0020nouveau message</string>
    <string name="activity_abstract_recommendation_msg">Recommandation</string>
    <string name="app_description">Ira gaka sise haɗi, dumbuŋ naŋ na da buymisemuŋ mi vula ndra gidaŋ ati wuluk angi slra hana, waɗ da ndra Gizigahay misi ar hiriuy\'oy vuna gar asi jumo\'ay ndra na.</string>
</resources>
