<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/layout_padding_10dp"
        android:paddingRight="@dimen/layout_padding_10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:text="E"
                style="@style/style_letter_text_header" />

            <TextView
                android:id="@+id/textView5"
                android:text="e"
                style="@style/style_letter_text_header" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:text="@string/msg_i_mike"
                style="@style/style_text_header_medium" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/libre_franklin_thin"
                android:text="@string/msg_c_quoi" />
        </LinearLayout>

        <ImageView
            android:id="@+id/bible_logo"
            android:layout_marginTop="@dimen/material_component_image_padding_top"
            android:layout_marginBottom="@dimen/material_component_image_padding_bottom"
            android:layout_width="254dp"
            android:layout_height="243dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/arc2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <TextView
                android:gravity="right"
                android:text="i leke"
                style="@style/style_text_header_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/libre_franklin_thin"
                android:gravity="right"
                android:text="C'est l'arc" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <TextView
                android:gravity="right"
                android:text="leke"
                style="@style/style_text_header_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/libre_franklin_thin"
                android:gravity="right"
                android:text="arc" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <TextView
                android:gravity="right"
                android:text="ke"
                style="@style/style_text_header_medium" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="clip_horizontal"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="e"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="e"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="e"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="e"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="horizontal"
            android:paddingTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="u"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="e"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="i"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="a"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="o"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="clip_horizontal"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="ke ke"
                android:textSize="@dimen/material_component_test_header"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="ki ki"
                android:textSize="@dimen/material_component_test_header"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="ku ku"
                android:textSize="@dimen/material_component_test_header"
                android:textStyle="normal" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="clip_horizontal"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="kake"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="kuki"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="keku"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="keku"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="clip_horizontal"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="ki"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="kuki"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="ka"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin"
                android:gravity="center"
                android:text="keki"
                android:textSize="@dimen/material_component_text_medium"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:orientation="horizontal"
            android:paddingTop="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="kilif"
                    style="@style/textMedium"/>

                <TextView
                    style="@style/textMediumSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/msg_poisson" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="leke"
                    style="@style/textMedium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/msg_arc"
                    style="@style/textMediumSubTitle"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="kukulum"
                    style="@style/textMedium"/>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/msg_cruche"
                    style="@style/textMediumSubTitle"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="kalaf"
                    style="@style/textMedium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/msg_feuille"
                    style="@style/textMediumSubTitle"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="40dp">

            <ImageView
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:alpha="0.7"
                android:src="@drawable/ic_keyboard_arrow_left_24px" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/libre_franklin_thin"
                android:gravity="center_horizontal"
                android:text="Page 3"
                android:textColor="@color/red_A700"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:alpha="0.7"
                android:src="@drawable/ic_keyboard_arrow_right_24px" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>